new file:   Assets/asset1.png 	new file:   Assets/asset2.png 	new file:   Assets/asset3.png 	new file:   Assets/asset4.png 	new file:   Assets/asset5.png 	new file:   Assets/asset6.png 	new file:   Assets/asset7.png 	new file:   Assets/asset8.png 	new file:   Assets/asset9.png 	new file:   Assets/icon.png 	new file:   Assets/logo.png 	new file:   Assets/logo2.png 	new file:   Assets/logo3.png 	new file:   Assets/logo4.png 	new file:   Assets/logo5.png 	modified:   Knight&Mourning.html 	modified:   Knight.html 	modified:   Wizz.html 	modified:   todo.txt

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
-Wizz Image
-lloyd
 Milky Way
+Joe?
+----------------
+Release
+----------------
+Alternate costumes?
+Tokens?
+Easter eggs?
+Level Editor?
