modified:   Discord.html 	new file:   Joe.html 	new file:   Tokens.html 	modified:   index.html 	modified:   todo.txt

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
-Joe?
 ----------------
 Release
 ----------------
-Alternate costumes?
-Tokens?
-Easter eggs?
-Level Editor?
+Update Knight & Mourning (change "is releasing" to "released")
+Update Knight (add all alternate costumes)
+Update Wizz (canon)
+Update Joe (canon)
+Update Tokens (add different types of tokens and other stuff)
